- Re-encode config file contents to match Civ 3's internal encoding
  - Config files should be encoded in UTF-8. They will be converted to Windows-1252 when loaded.
- Accented Latin characters no longer separate words
- Fix workers in boats can do "extra" jobs (road-to, auto-irrigate, etc.) despite restriction

* RELEASE 11B
- Support for the executable from PCGames.de

* RELEASE 11
- Buildings can generate resources
- Buildings can be set as prerequisites for unit production
- On the city screen, hold shift when clicking a specialist to switch to the previous type
- Can cancel out pop pollution with negative pollution amount on building flagged as removing pop pollution
- Disallow workers from improving water tiles
- Exempt invisible and hidden nationality units from trespassing restriction
- Do not group units with differing charm statuses

* RELEASE 10B
- Fix crash caused by patch for phantom resource bug

* RELEASE 10
- Scenario-specific mod configurations (see README for more info)
- Mod info button
  - Tells the mod version and file names of currently loaded configs
  - Located on the upper right of the preferences screen
- Better logic for grouping units on right click menu
- Option to let units move after airdropping
- Fix phantom resource bug
- Fix air units losing a turn after being set to intercept
- L key loads unit over activating AI city loc highlighter

* RELEASE 9
- Perfume can be applied to multiple improvements or unit types
- Corruption can be completely removed with "OFF" government setting
- Press P in city screen to see AI point value for each available build
- Press L on map to see how desirable the AI finds each tile as a city location
- AI naval invasion forces can include artillery (with offensive artillery AI enabled)
- Option to disable worker automation
- Disallow land settlers from founding on water
- Warn in case perfume target doesn't match any unit or improvement name