@@ -163,6 +163,7 @@ define,	   0x5C5110,	0x5D3DF0,	0x5C4E20,	"Unit_load",					"void (__fastcall *) (
 define,	   0xA526BC,	0xA74EB4,	0xA5267C,	"p_human_player_bits",				"int *"
 define,	   0x5F8130,	0x6085D0,	0x5F8060,	"Tile_Image_Info_draw_on_map",			"int (__fastcall *) (Tile_Image_Info * this, int edx, Map_Renderer * map_renderer, int pixel_x, int pixel_y, int param_4, int param_5, int param_6, int param_7)"
 repl vptr, 0x66A554,	0x687660,	0x66A554,	"Map_Renderer_m19_Draw_Tile_by_XY_and_Flags",	"void (__fastcall *) (Map_Renderer * this, int edx, int param_1, int pixel_x, int pixel_y, Map_Renderer * map_renderer, int param_5, int tile_x, int tile_y, int param_8)"
+repl vptr, 0x66A624,	0x687730,	0x66A624,	"Map_Renderer_m71_Draw_Tiles",			"void (__fastcall *) (Map_Renderer * this, int edx, int param_1, int param_2, int param_3)"
 repl vptr, 0x66B520,	0x688620,	0x66B520,	"Main_Screen_Form_m82_handle_key_event",	"void (__fastcall *) (Main_Screen_Form * this, int edx, int virtual_key_code, int is_down)"
 define,	   0x5BE470,	0x5CD030,	0x5BE180,	"Unit_get_max_move_points",			"int (__fastcall *) (Unit * this)"
 repl call, 0x5C190B,	0x5D0493,	0x5C161B,	"Unit_get_move_points_after_airdrop",		""
